--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@mantine/charts": "^7.15.2",
     "@mantine/core": "^7.15.2",
+    "@mantine/dates": "^7.15.2",
     "@notionhq/client": "^2.2.15",
+    "dayjs": "^1.11.13",
     "next": "^15.1.1-canary.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
